# storytelling_videos

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
storytelling_videos/: main.py
storytelling_videos/core/: config_core.py  loggings.py  mongodb_core.py  openrouter_core.py
storytelling_videos/models/: __init__.py  database_schema.py  storygeneration_model.py
storytelling_videos/repositories/: mongodb_repo.py  openrouter_repo.py
storytelling_videos/routers/: _base.py  kokoro_tts_router.py  mongo_router.py  openrouter_router.py  orchestrate_router.py  srt_router.py  video_gen_router.py
storytelling_videos/services/: openrouter_service.py  pipeline_service.py  preprocess_text_service.py  reddit_scrapper.py  video_gen_service.py  voice_kokoro_service.py  whisper_service.py  whisperx_service.py
