[project]
name = "storytelling-videos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.121.2",
    "kokoro>=0.9.4",
    "moviepy==1.0.3",
    "openai>=2.8.0",
    "openai-whisper>=20250625",
    "whisperx>=0.10.0",
    "pillow>=12.0.0",
    "praw>=7.8.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.4",
    "soundfile>=0.13.1",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 88
format.line-ending = "lf"
